--- a/FileManagerApp.csproj
+++ b/FileManagerApp.csproj
@@ -21,4 +21,8 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.FileSystemGlobbing" Version="9.0.3" />
+  </ItemGroup>
+
 </Project>
